--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -4,5 +4,16 @@
 	
 	<!-- TODO: Remove or change this placeholder text -->
 	<string name="hello_blank_fragment">Hello blank fragment</string>
-	<string name="title_activity_add_class">Add Class</string>
+	<string name="title_activity_add_class">Class rooms</string>
+	<string name="input_hint">Add Class Name</string>
+	<string name="input">Class Name</string>
+	<string name="input_prefill"/>
+	<string name="title_activity_add_student">Activity_add_student</string>
+	<string name="hint_name">Full Name</string>
+	<string name="hint_address">Address</string>
+	<string name="hint_mobile">Mobile Number</string>
+	<string name="hint_email">Email Address</string>
+	<string name="input_hint1">java</string>
+	<string name="title">Add Student</string>
+	<string name="positive">Add</string>
 </resources>
