--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -16,4 +16,5 @@
 	<string name="input_hint1">java</string>
 	<string name="title">Add Student</string>
 	<string name="positive">Add</string>
+	<string name="title_activity_attendance">Attendance</string>
 </resources>
